Added media_id optional query parameter to allow listing only media perms for a specific media_id
